** Added support for running integration test with cargo into webapp pom