@@ -11,6 +11,22 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
+  <properties>
+    <!-- Test -->
+
+    <wildfly.home>${project.basedir}/.cargo/extracts/wildfly-8.1.0.CR1/wildfly-8.1.0.CR1</wildfly.home>
+    <wildfly.version>8.1.0.CR1</wildfly.version>
+    <h2.version>1.4.177</h2.version>
+    <it.port>8080</it.port>
+    <it.host>dev.forgeandillusion.net</it.host>
+    <it.ctx>fnici</it.ctx>
+    <it.jdbc.driver>org.h2.Driver</it.jdbc.driver>
+    <it.jdbc.url>jdbc:h2:file:${project.build.directory}/h2;AUTO_SERVER=TRUE</it.jdbc.url>
+    <it.jdbc.jndi>jboss/datasources/MysqlDS</it.jdbc.jndi>
+    <it.jdbc.username>sa</it.jdbc.username>
+    <it.jdbc.password>sa</it.jdbc.password>
+  </properties>
+
   <dependencies>
 
     <!-- Servlet -->
@@ -145,7 +161,19 @@
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <scope>provided</scope>
+    </dependency> 
+
+    <!-- Http components -->
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+    </dependency>   
 
     <!-- FnI -->
 
@@ -263,8 +291,31 @@
       <artifactId>jackson-core-asl</artifactId>
       <scope>provided</scope>
     </dependency>
-  </dependencies>
 
+    <!-- Test -->
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <scope>test</scope>
+      <version>2.41.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${h2.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
+  
   <build>
     <pluginManagement>
       <plugins>
@@ -326,6 +377,161 @@
             </manifestEntries>
           </archive>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14.1</version>
+        <configuration>
+          <systemPropertyVariables>
+            <jboss.home>${wildfly.home}</jboss.home>
+            <module.path>${wildfly.home}/modules</module.path>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <systemPropertyVariables>
+            <jboss.home>${wildfly.home}</jboss.home>
+            <module.path>${wildfly.home}/modules</module.path>
+            <it.host>${it.host}</it.host>
+            <it.port>${it.port}</it.port>
+            <it.ctx>${it.ctx}</it.ctx>
+          </systemPropertyVariables>
+        </configuration>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>sql-maven-plugin</artifactId>
+        <version>1.5</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+          </dependency>
+        </dependencies>
+
+        <configuration>      
+          <driver>${it.jdbc.driver}</driver>
+          <url>${it.jdbc.url}</url>
+          <username>${it.jdbc.username}</username>
+          <password>${it.jdbc.password}</password>
+        </configuration>
+        <executions>
+          <execution>
+            <id>create-schema</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <autocommit>true</autocommit>
+              <srcFiles>
+                <srcFile>src/test/resources/create.sql</srcFile>
+              </srcFiles>
+            </configuration>
+          </execution>
+          
+          <execution>
+            <id>drop-db-after-test</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <autocommit>true</autocommit>
+              <srcFiles>
+                <srcFile>src/test/resources/drop.sql</srcFile>
+              </srcFiles>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <version>1.4.8</version>
+        <configuration>
+          <container>
+            <containerId>wildfly8x</containerId>
+            <log>${project.basedir}/target/cargo.log</log>
+            <output>${project.basedir}/target/wildfly.log</output>
+            <zipUrlInstaller>
+              <url>http://download.jboss.org/wildfly/8.1.0.CR1/wildfly-8.1.0.CR1.zip</url>
+              <downloadDir>${project.basedir}/.cargo/downloads</downloadDir>
+              <extractDir>${project.basedir}/.cargo/extracts</extractDir>
+            </zipUrlInstaller>
+            <dependencies>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+              </dependency>
+            </dependencies>
+          </container>
+          <configuration>
+            <properties>
+              <cargo.servlet.port>${it.port}</cargo.servlet.port>
+              <cargo.jboss.configuration>standalone</cargo.jboss.configuration>
+              <cargo.jvmargs>-Xms64m -Xmx1152m -XX:MaxPermSize=512m -XX:-UseSplitVerifier</cargo.jvmargs>
+              <cargo.datasource.datasource.fnici>
+                cargo.datasource.driver=${it.jdbc.driver}|
+                cargo.datasource.url=${it.jdbc.url}|
+                cargo.datasource.jndi=${it.jdbc.jndi}|
+                cargo.datasource.username=${it.jdbc.username}|
+                cargo.datasource.password=${it.jdbc.password}|
+                cargo.datasource.transactionsupport=LOCAL_TRANSACTION
+              </cargo.datasource.datasource.fnici>
+            </properties>
+          </configuration>
+          <deployables>
+            <deployable>
+              <properties>
+                <context>${it.ctx}</context>
+              </properties>
+              <pingURL>http://${it.host}:${it.port}/${it.ctx}</pingURL>
+              <pingTimeout>600000</pingTimeout>
+            </deployable>
+          </deployables>
+
+        </configuration>
+        <executions>
+          <execution>
+            <id>start-cargo</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>stop-cargo</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
